--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -512,6 +512,10 @@ a:hover { text-decoration: underline; }
   cursor: pointer;
 }
 
+.search-item:hover {
+  opacity: 1;
+}
+
 input:focus{
     outline: none;
 }
