--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -365,7 +365,7 @@ a:hover { text-decoration: underline; }
   padding: 1px;
   text-align: left;
   border-radius: 12px;
-  min-width: 220px;
+  min-width: 250px;
 }
 .popup-content {
   margin: 10px 13px 8px 13px;
@@ -396,16 +396,18 @@ a:hover { text-decoration: underline; }
   pointer-events: auto;
   transform: rotate(45deg);
 }
+
 .popup-content-wrapper,
 .popup-tip {
-  background-color: #333;
+  background-color: #eee;
+  color: black;
   opacity: 95%;
-  color: #eee;
   font-size: 13px;
   box-shadow: 0 3px 14px rgba(0,0,0,0.4);
 }
 
 .popup-close-button {
+  color: black;
   position: absolute;
   top: 0;
   right: 0;
@@ -415,7 +417,6 @@ a:hover { text-decoration: underline; }
   width: 18px;
   height: 14px;
   font: 16px/14px Tahoma,Verdana,sans-serif;
-  color: #c3c3c3;
   text-decoration: none;
   font-weight: 700;
   background: 0 0;
@@ -451,6 +452,7 @@ a:hover { text-decoration: underline; }
   display: inline-block;
   float: right;
   margin-left: 12px;
+  color: black;
 }
 
 .popup-link > * {
