--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -95,6 +95,10 @@ a:hover { text-decoration: underline; }
   width: 16px;
 }
 
+.sidebar-close:hover * {
+  opacity: 1;
+}
+
 #left-sidebar > .sidebar-close {
   border-left: 1px solid #222;
   left: 100%;
@@ -109,6 +113,7 @@ a:hover { text-decoration: underline; }
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
   border-left: 9px solid white;
+  opacity: .6;
 }
 
 #left-sidebar .triangle{
