--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -161,7 +161,7 @@ a:hover { text-decoration: underline; }
 }
 
 .panel::-webkit-scrollbar {
-  width: 6px
+  width: 8px
 }
 
 .panel::-webkit-scrollbar-thumb {
@@ -170,6 +170,11 @@ a:hover { text-decoration: underline; }
 }
 
 .panel:hover::-webkit-scrollbar-thumb {
+  background: hsla(0, 0%, 53%, .4);
+  border-radius: 4px;
+}
+
+.panel::-webkit-scrollbar-thumb:hover {
   background: hsla(0, 0%, 53%, .8);
 }
 
