--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -599,6 +599,9 @@ input::selection {
   #categories .group-categories {
     column-count: 1;
   }
+  input::placeholder {
+        color: transparent;
+  }
 }
 
 
