--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -515,25 +515,23 @@ hr { opacity: .6;}
 }
 
 .popup-subnote-item {
-  position: relative;
-  display: block;
-  margin-left : 1em;
+  margin-left : 0.1em;
   opacity: .7;
-  font-size: 13px;
+}
+
+.popup-subnote-item a {
   color: black;
+  font-size: 13px;
+  margin-left : 0.1em;
 }
 
 .popup-subnote-item:hover {
   opacity: 1;
+}
+
+.popup-subnote-item a:hover {
   text-decoration: none;
 }
-
-.popup-subnote-item:before {
-  position: absolute;
-  left: -0.8em;
-  content: "\2022";
-}
-
 
 #alert {
   position: absolute;
