--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -399,6 +399,7 @@ hr { opacity: .6;}
   position: absolute;
   text-align: center;
   margin-bottom: 20px;
+  max-width: 300px;
 }
 
 .popup-content-wrapper {
@@ -538,6 +539,9 @@ hr { opacity: .6;}
 .popup-subnote-item {
   margin-left : 0.1em;
   opacity: .8;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .popup-subnote-item .icon {
