--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -143,7 +143,8 @@ a:hover { text-decoration: underline; }
 }
 
 .panel {
-  padding: 8px;
+  padding-left: 6px;
+  padding-right: 8px;
   overflow-x: hidden;
   height: 100%;
   scrollbar-gutter: stable both-edges;
