--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -143,9 +143,9 @@ a:hover { text-decoration: underline; }
 }
 
 .panel {
-  padding-left: 6px;
-  padding-right: 8px;
-  padding-bottom: 10px;
+  padding: 16px;
+  padding-left: 8px;
+  padding-right: 10px;
   overflow-x: hidden;
   height: 100%;
   scrollbar-gutter: stable both-edges;
