--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -161,6 +161,10 @@ a:hover { text-decoration: underline; }
   scrollbar-gutter: stable both-edges;
 }
 
+#left-panel {
+  padding-bottom: 24px;
+}
+
 .button-panel {
   display: flex;
   flex-wrap: wrap;
