--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -682,10 +682,10 @@ input::selection {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 .mobile-container > * {
-  display: inline-block;
   text-align: center;
   height: 40px;
 }
