--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -381,6 +381,13 @@ hr { opacity: .6;}
   min-width: 0;
 }
 
+.button-group {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .input-group-prepend {
 }
 
@@ -794,6 +801,4 @@ input::selection {
     transform: translateY(0px)
   }
 }
-
-
 
