--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -596,6 +596,16 @@ hr { opacity: .6;}
   text-decoration: none;
 }
 
+#popup-data-toggle hr::after {
+  content: '...';
+  color: dimgrey;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -25px);
+  padding: 0 5px; /* Adjust padding as needed */
+  font-size: 20px; /* Adjust font size as needed */
+}
+
 #alert {
   position: absolute;
   margin: auto;
