add search score to the tooltip

--- a/fallout-london/main.css
+++ b/fallout-london/main.css
@@ -715,6 +715,11 @@ hr { opacity: .6;}
   overflow: hidden;
 }
 
+.exact {
+  font-weight: bold;
+}
+
+
 .search-item.selected{
   opacity: 1;
   background: transparent;
