--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -1,14 +1,13 @@
 .markers-control {
   font-family: sans-serif;
   font-size: 14px;
-  position: absolute;
-  left: 244px;
-  top: 29px;
   padding: 0;
   margin: 0;
   display: flex;
   align-items: flex-start;
   gap: 6px;
+
+  margin-top: 8px;
 }
 
 .markers-control ul,
