--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -9,7 +9,8 @@
   margin-top: 8px;
 }
 
-.markers-control > li {
+.markers-control > ul,
+.markers-control > ul > li {
   display: block;
   padding: 0;
   margin: 0;
@@ -28,7 +29,7 @@
 
 .markers-control-item {
   margin: 0;
-  padding: 8px;
+  padding: 6px;
   display: flex;
   gap: 4px;
   cursor: pointer;
@@ -49,7 +50,6 @@
 .markers-control-items {
   background-color: white;
   border-radius: 8px;
-
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -57,7 +57,7 @@
   max-height: 0;
   position: absolute;
   margin-top: 12px;
-  margin-left: -8px;
+  margin-left: 0px;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   transition: all 0.3s ease;
 }
@@ -74,7 +74,7 @@
   border-top: none;
 }
 
-.markers-control > li:focus-within > ul {
+.markers-control > ul > li:focus-within > ul {
   max-height: 320px;
   max-width: 320px;
   overflow: visible;
