--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -54,12 +54,12 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  max-height: 0;
   position: absolute;
   margin-top: 12px;
   margin-left: 0px;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   transition: all 0.3s ease;
+  max-height: 0;
 }
 
 .markers-control-items::before {
@@ -74,7 +74,7 @@
   border-top: none;
 }
 
-.markers-control > ul > li:focus-within > ul {
+.markers-control *:focus-within .markers-control-items {
   max-height: 320px;
   max-width: 320px;
   overflow: visible;
