--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -16,15 +16,43 @@
   margin: 0;
 }
 
+.markers-control > ul {
+  background-color: white;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.markers-control ul:focus-within {
+  border-radius: 8px;
+}
+
 .markers-control-group {
   margin: 0;
   padding: 8px;
   padding-left: 16px;
   padding-right: 16px;
   display: block;
-  background-color: white;
-  border-radius: 16px;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+}
+
+.markers-control-items {
+  background-color: white;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  /*position: absolute;*/
+
+  margin-top: 0px;
+  margin-left: 0px;
+  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
+
+  max-height: 0;
+  max-width: 50px;
+
+  border-top: 1px solid rgba(0,0,0,0.1);
 }
 
 .markers-control-item {
@@ -33,9 +61,8 @@
   display: flex;
   gap: 4px;
   cursor: pointer;
-
-  padding-left: 14px;
-  padding-right: 14px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .markers-control-item > * {
@@ -45,33 +72,6 @@
 .markers-control-item :nth-child(2) {
   flex: 1;
   padding-right: 8px;
-}
-
-.markers-control-items {
-  background-color: white;
-  border-radius: 8px;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  position: absolute;
-  margin-top: 12px;
-  margin-left: 0px;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
-  transition: all 0.3s ease;
-  max-height: 0;
-}
-
-.markers-control-items::before {
-  content: "";
-  position: absolute;
-  top: -8px; left: 16px;
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 8px solid white;
-  border-top: none;
 }
 
 .markers-control *:focus-within .markers-control-items {
