--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -6,7 +6,8 @@
   display: flex;
   align-items: flex-start;
   gap: 6px;
-  margin-top: 8px;
+  margin-top: 6px;
+  margin-left: 4px;
 }
 
 .markers-control > ul,
