--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -22,6 +22,8 @@
   border-radius: 16px;
   overflow: hidden;
   transition: all 0.3s ease;
+  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  /*border: 1px solid rgba(0,0,0,0.1);*/
 }
 
 .markers-control ul:focus-within {
@@ -43,19 +45,23 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-
-  /*position: absolute;*/
-
   margin-top: 0px;
   margin-left: 0px;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   transition: all 0.3s ease;
-
   max-height: 0;
   max-width: 50px;
+}
+
+.markers-control *:focus-within .markers-control-items {
+  max-height: 320px;
+  max-width: 320px;
+  overflow: visible;
+  padding-top: 6px;
+  padding-bottom: 6px;
 
   border-top: 1px solid rgba(0,0,0,0.1);
 }
+
 
 .markers-control-item {
   margin: 0;
@@ -74,14 +80,6 @@
 .markers-control-item :nth-child(2) {
   flex: 1;
   padding-right: 8px;
-}
-
-.markers-control *:focus-within .markers-control-items {
-  max-height: 320px;
-  max-width: 320px;
-  overflow: visible;
-  padding-top: 6px;
-  padding-bottom: 6px;
 }
 
 .markers-control-group, .markers-control-item {
