--- a/src/controls/search-control/search-control.css
+++ b/src/controls/search-control/search-control.css
@@ -7,7 +7,8 @@
   z-index: 9999;
   padding: 0;
   margin: 0;
-  border: 1px solid rgba(0,0,0,0.1);
+  /*border: 1px solid rgba(0,0,0,0.1);*/
+  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   transition: all 0.3s ease;
 }
 
