--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -17,11 +17,14 @@
   margin: 0;
 }
 
+.markers-control * {
+  transition: all 0.3s ease;
+}
+
 .markers-control > ul {
   background-color: white;
   border-radius: 16px;
   overflow: hidden;
-  transition: all 0.3s ease;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
 }
 
@@ -40,15 +43,14 @@
 
 .markers-control-items {
   background-color: white;
-  padding: 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  margin-top: 0px;
-  margin-left: 0px;
-  transition: all 0.3s ease;
   max-height: 0;
   max-width: 50px;
+
+  padding: 0;
+  margin: 0;
 }
 
 .markers-control *:focus-within .markers-control-items {
@@ -57,7 +59,6 @@
   overflow: visible;
   padding-top: 6px;
   padding-bottom: 6px;
-
   border-top: 1px solid rgba(0,0,0,0.1);
 }
 
