--- a/src/controls/search-control/search-control.css
+++ b/src/controls/search-control/search-control.css
@@ -12,6 +12,10 @@
   transition: all 0.3s ease;
 }
 
+.search-control > * {
+  user-select: none;
+}
+
 .search-form {
   padding: 0;
   margin: 0;
@@ -55,6 +59,7 @@
   padding: 12px 4px 9px 2px;
   margin: 0;
   margin-left: 16px;
+  user-select: text !important;
 }
 
 .search-control:has(.search-list:not(:empty)) .search-input:focus {
