--- a/src/controls/search-control/search-control.css
+++ b/src/controls/search-control/search-control.css
@@ -165,3 +165,17 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.search-menu {
+  font-size: 22px;
+  width: 40px;
+
+  transform: scaleX(1.25);
+
+  margin-left: 10px;
+  margin-top: 0px;
+  margin-right: -14px;
+
+  opacity: 0.75;
+}
+
