--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -30,6 +30,8 @@
   backdrop-filter: blur(10px);
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   outline: 2px solid rgba(255,255,255,0.1);
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.5) transparent;
 }
 
 .markers-control-groups:focus-within {
@@ -62,7 +64,7 @@
 .retro .markers-control-items {
   position: absolute;
   background: white;
-  border-radius: 16px;
+  border-radius: 8px;
   margin-top: 8px;
   border-top: none !important;
   transition: none;
