--- a/src/controls/markers-control/markers-control.css
+++ b/src/controls/markers-control/markers-control.css
@@ -25,7 +25,7 @@
   margin: 0;
 }
 
-.markers-control-groups.glass {
+.glass .markers-control-groups {
   background-color: rgba(255,255,255,0.1) !important;
   backdrop-filter: blur(10px);
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
